# easy_protobuf_edit

./: .gitignore  Cargo.toml  README.md  easy_protobuf_edit-2e67823a9957e6ec.js  easy_protobuf_edit-709b4ee15f3742b8.js  easy_protobuf_edit-7882f3fe882ff411.js  index.html  sw.js
.github/workflows/: pages.yml  release.yml
assets/: sw.js
locales/: en.toml  zh-CN.toml
src/: app.rs  gui.rs  lib.rs  main.rs  one_shot.rs
