[package]
name = "easy_protobuf_edit"
version = "1.0.0"
edition = "2021"

[dependencies]
prost = { version = "0.13", default-features = false, features = ["derive", "std"] }
bytes = { version = "1.9" }
prost-types = { version = "0.13" }
prost-reflect = { version = "0.14", features = ["serde"] }
serde_json = { version = "1" }
clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.13" }