[package]
name = "easy_protobuf_edit"
version = "1.2.0"
edition = "2021"

[dependencies]
prost = { version = "0.13", default-features = false, features = ["derive", "std"] }
bytes = { version = "1.9" }
prost-types = { version = "0.13" }
prost-reflect = { version = "0.14", features = ["serde"] }
serde_json = { version = "1" }
clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.13" }
tracing-subscriber = { version = "0.3" }
rfd = { version = "0.15" }
tokio = { version = "1.43", default-features = false, features = ["rt-multi-thread", "rt"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true