[package]
name = "easy_protobuf_edit"
version = "1.3.1"
authors = ["nihilityer <nihilityerwu@gmail.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "wayland", # To support Linux (and CI)
] }
egui_extras = { version = "0.30" }
log = "0.4"

prost = { version = "0.13", default-features = false, features = ["derive"] }
bytes = { version = "1.9", default-features = false }
prost-types = { version = "0.13", default-features = false }
prost-reflect = { version = "0.14", default-features = false, features = ["serde"] }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal"] }
tokio = {version = "1.43", default-features = false, features = ["macros", "rt-multi-thread", "rt"]}
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd = { version = "0.15" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
